@@ -1,3 +1,7 @@
+2002-12-30  Jacob Smullyan  <smulloni@smullyan.org>
+
+	* pylibs/PyDO/PyDO2.py: small fixes.
+
 2002-12-23    <smulloni@smullbola.smullyan.org>
 
 	* docs/stmlrefer/stmlrefer.tex: fixed LaTeX error.
